src/test/ui/on-unimplemented/enclosing-scope.stderr
error[E0277]: the trait bound `Foo: Trait` is not satisfied
  --> $DIR/enclosing-scope.rs:14:11
   |
LL |       let x = || {
   |  _____________-
LL | |         f(Foo{});
   | |         - ^^^^^ the trait `Trait` is not implemented for `Foo`
   | |         |
   | |         required by a bound introduced by this call
LL | |         let y = || {
LL | |             f(Foo{});
LL | |         };
LL | |     };
   | |_____- in this scope
   |
note: required by a bound in `f`
  --> $DIR/enclosing-scope.rs:10:9
   |
LL | fn f<T: Trait>(x: T) {}
   |         ^^^^^ required by this bound in `f`

error[E0277]: the trait bound `Foo: Trait` is not satisfied
  --> $DIR/enclosing-scope.rs:16:15
   |
LL |           let y = || {
   |  _________________-
LL | |             f(Foo{});
   | |             - ^^^^^ the trait `Trait` is not implemented for `Foo`
   | |             |
   | |             required by a bound introduced by this call
LL | |         };
   | |_________- in this scope
   |
note: required by a bound in `f`
  --> $DIR/enclosing-scope.rs:10:9
   |
LL | fn f<T: Trait>(x: T) {}
   |         ^^^^^ required by this bound in `f`

error[E0277]: the trait bound `Foo: Trait` is not satisfied
  --> $DIR/enclosing-scope.rs:22:15
   |
LL | / fn main() {
LL | |     let x = || {
LL | |         f(Foo{});
LL | |         let y = || {
...  |
LL | |             f(Foo{});
   | |             - ^^^^^ the trait `Trait` is not implemented for `Foo`
   | |             |
   | |             required by a bound introduced by this call
...  |
LL | |     f(Foo{});
LL | | }
   | |_- in this scope
   |
note: required by a bound in `f`
  --> $DIR/enclosing-scope.rs:10:9
   |
LL | fn f<T: Trait>(x: T) {}
   |         ^^^^^ required by this bound in `f`

error[E0277]: the trait bound `Foo: Trait` is not satisfied
  --> $DIR/enclosing-scope.rs:26:7
   |
LL | / fn main() {
LL | |     let x = || {
LL | |         f(Foo{});
LL | |         let y = || {
...  |
LL | |     f(Foo{});
   | |     - ^^^^^ the trait `Trait` is not implemented for `Foo`
   | |     |
   | |     required by a bound introduced by this call
LL | | }
   | |_- in this scope
   |
note: required by a bound in `f`
  --> $DIR/enclosing-scope.rs:10:9
   |
LL | fn f<T: Trait>(x: T) {}
   |         ^^^^^ required by this bound in `f`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
